--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,36 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  background: red;
+  background: rgba(0, 0, 0, 0.9);
+  color: #fff;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.showcase::after {
+  content: "";
+  display: block;
+  background: url("/image/showcase.jpg") no-repeat center;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  -webkit-filter: blur(10px);
+          filter: blur(10px);
+  -webkit-transition: all 1000ms ease;
+  transition: all 1000ms ease;
+}
+
+.showcase:hover::after {
+  -webkit-filter: blur(0);
+          filter: blur(0);
+}
+
+.content .logo {
+  height: 180px;
+  width: 180px;
 }
 /*# sourceMappingURL=style.css.map */
