--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,36 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  background: red;
+  background: rgba(0, 0, 0, 0.9);
+  color: #fff;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.showcase {
+  &::after {
+    content: "";
+    display: block;
+    background: url("/image/showcase.jpg") no-repeat center;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    filter: blur(10px);
+
+    transition: all 1000ms ease;
+  }
+
+  &:hover::after {
+    filter: blur(0);
+  }
+}
+
+.content {
+  .logo {
+    height: 180px;
+    width: 180px;
+  }
 }
