--- a/style/style.scss
+++ b/style/style.scss
@@ -28,9 +28,34 @@ body {
   }
 }
 
+.showcase:hover .content {
+  filter: blur(2px);
+}
+
 .content {
+  height: 350px;
+  width: 300px;
+  text-align: center;
+
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  transition: all 1000ms ease;
+
   .logo {
     height: 180px;
     width: 180px;
+  }
+
+  &-title {
+    line-height: 1;
+    margin: 1rem;
+  }
+
+  &-text {
+    margin: 1rem 0;
   }
 }
