--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,56 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.container {
+  max-width: 960px;
+  margin: auto;
+  padding: 4rem 1rem;
+}
+
+.grid-3 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+@media (max-width: 560px) {
+  .grid-3 {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
+.grid-2 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+@media (max-width: 560px) {
+  .grid-2 {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
+.center {
+  text-align: center;
+}
+
+.bg-light {
+  background: #f4f4f4;
+  color: #333;
+}
+
+.bg-dark {
+  background: #333;
+  color: #f4f4f4;
+}
+
 .showcase::after {
   content: "";
   display: block;
@@ -22,6 +72,12 @@ body {
           filter: blur(10px);
   -webkit-transition: all 1000ms ease;
   transition: all 1000ms ease;
+}
+
+@media (max-width: 560px) {
+  .showcase::after {
+    height: 50vh;
+  }
 }
 
 .showcase:hover::after {
@@ -48,17 +104,108 @@ body {
   transition: all 1000ms ease;
 }
 
+@media (max-width: 560px) {
+  .content {
+    top: 15%;
+    -webkit-transform: translate(-50%, -10%);
+            transform: translate(-50%, -10%);
+  }
+}
+
+@media (max-height: 500px) {
+  .content {
+    top: 20%;
+    -webkit-transform: translate(-50%, -10%);
+            transform: translate(-50%, -10%);
+  }
+}
+
 .content .logo {
   height: 180px;
   width: 180px;
 }
 
+@media (max-width: 560px) {
+  .content .logo {
+    height: 140px;
+    width: 140px;
+  }
+}
+
 .content-title {
+  font-size: 2.2rem;
   line-height: 1;
   margin: 1rem;
 }
 
 .content-text {
   margin: 1rem 0;
+  line-height: 1.7;
+}
+
+@media (max-width: 560px) {
+  .content-text {
+    display: none;
+  }
+}
+
+@media (max-height: 500px) {
+  .content-text {
+    display: none;
+  }
+}
+
+.services i.clr-red {
+  color: #e41d1d;
+}
+
+.services i.clr-blue {
+  color: #3b58ea;
+}
+
+.services i.clr-skyblue {
+  color: #278ce2;
+}
+
+.services h2 {
+  text-transform: capitalize;
+  margin: 1rem 0;
+}
+
+.services p {
+  margin: 1rem 0;
+}
+
+@media (max-width: 560px) {
+  .services div {
+    border-bottom: 1px solid #333;
+    padding: 2rem 1rem;
+  }
+}
+
+.about .center {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.about h3 {
+  text-transform: capitalize;
+  margin: 1rem 0;
+}
+
+.about p {
+  margin: 1rem 0;
+}
+
+@media (max-width: 560px) {
+  .about {
+    text-align: center;
+  }
+}
+
+footer {
+  padding: 2.2rem;
+  text-transform: capitalize;
 }
 /*# sourceMappingURL=style.css.map */
