--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,4 @@
+// base
 * {
   box-sizing: border-box;
   margin: 0;
@@ -10,6 +11,51 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.container {
+  max-width: 960px;
+  margin: auto;
+  padding: 4rem 1rem;
+  // overflow: hidden;
+}
+
+// utility
+.grid-3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+
+  // mobile portrait
+  @media (max-width: 560px) {
+    grid-template-columns: 1fr;
+  }
+}
+
+.grid-2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+
+  // mobile portrait
+  @media (max-width: 560px) {
+    grid-template-columns: 1fr;
+  }
+}
+
+.center {
+  text-align: center;
+}
+
+.bg-light {
+  background: #f4f4f4;
+  color: #333;
+}
+
+.bg-dark {
+  background: #333;
+  color: #f4f4f4;
+}
+
+// showcase
 .showcase {
   &::after {
     content: "";
@@ -21,6 +67,11 @@ body {
     filter: blur(10px);
 
     transition: all 1000ms ease;
+
+    // mobile portrait
+    @media (max-width: 560px) {
+      height: 50vh;
+    }
   }
 
   &:hover::after {
@@ -45,17 +96,105 @@ body {
 
   transition: all 1000ms ease;
 
+  // mobile portrait
+  @media (max-width: 560px) {
+    top: 15%;
+    transform: translate(-50%, -10%);
+  }
+
+  // mobile landscape
+  @media (max-height: 500px) {
+    top: 20%;
+    transform: translate(-50%, -10%);
+  }
+
   .logo {
     height: 180px;
     width: 180px;
+
+    // mobile portrait
+    @media (max-width: 560px) {
+      height: 140px;
+      width: 140px;
+    }
   }
 
   &-title {
+    font-size: 2.2rem;
     line-height: 1;
     margin: 1rem;
   }
 
   &-text {
     margin: 1rem 0;
+    line-height: 1.7;
+
+    // mobile portrait
+    @media (max-width: 560px) {
+      display: none;
+    }
+
+    // mobile landscape
+    @media (max-height: 500px) {
+      display: none;
+    }
   }
+}
+
+// services
+.services {
+  i.clr-red {
+    color: #e41d1d;
+  }
+
+  i.clr-blue {
+    color: #3b58ea;
+  }
+
+  i.clr-skyblue {
+    color: #278ce2;
+  }
+
+  h2 {
+    text-transform: capitalize;
+    margin: 1rem 0;
+  }
+
+  p {
+    margin: 1rem 0;
+  }
+
+  div {
+    // mobile portrait
+    @media (max-width: 560px) {
+      border-bottom: 1px solid #333;
+      padding: 2rem 1rem;
+    }
+  }
+}
+
+// about
+.about {
+  .center {
+    align-self: center;
+  }
+  h3 {
+    text-transform: capitalize;
+    margin: 1rem 0;
+  }
+
+  p {
+    margin: 1rem 0;
+  }
+
+  // mobile portrait
+  @media (max-width: 560px) {
+    text-align: center;
+  }
+}
+
+// footer
+footer {
+  padding: 2.2rem;
+  text-transform: capitalize;
 }
